Commit #12. Homework9, Improve FileNavigator.java using Stream.